Bug Fix - Non-Square Profile Pictures Shifting Content
Issue:
Non-square profile pictures shifting content and expanding past container.

Resolution:
Set object-fit to cover, and used lauoutEffect to match width to height.

--- a/src/styles/Avatar.module.css
+++ b/src/styles/Avatar.module.css
@@ -6,6 +6,7 @@
 
 .AvatarImage {
   width: 100%;
+  object-fit: cover;
   border: solid 2px var(--primary);
 }
 
